# Business-Scraper-Electron

./: .gitignore  CMakeLists.txt  LICENSE_THIRD_PARTY  README.md  build-dist.bat  build-dist.sh  build.bat  build.sh  package-lock.json  package.json
assets/: README.md  icon.icns
include/core/: BusinessScraperEngine.h
include/scrapers/: MapScraper.h
src/: main_cli.cpp
src/core/: BusinessScraperEngine.cpp
src/electron/: main.js  preload.js
src/output/: Formatter.cpp
src/renderer/: app.js  index.html  styles.css
src/scrapers/: MapScraper.cpp
